# seabed-2030

./: README-template.md  README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: lint
src/stactools/seabed_2030/: __init__.py  cog.py  commands.py  constants.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: GEBCO_2020_5_7_01_01.tif  GEBCO_2020_test.nc
