[metadata]
name = stactools-seabed-2030
version = attr: stactools.seabed_2030.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/seabed-2030
project_urls =
    Documentation = https://stactools-seabed-2030.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/seabed-2030/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1
    netCDF4 ~= 1.5.7

[options.packages.find]
where = src
